# rewanz-kerfusia

./: .gitignore  CMakeLists.txt  README.md
art/: main.blend  main.blend1
assets/models/: main.dia  main.ysce
include/: gameobject.h  rewanz_kerfusia_app.h
src/: gameobject.cpp  main.cpp  rewanz_kerfusia_app.cpp
